update readme, rename to 'Page Redirector'

--- a/ArXivRedirector Extension/Resources/popup.html
+++ b/ArXivRedirector Extension/Resources/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>ArXiv Redirector</title>
+    <title>Page Redirector</title>
     <link rel="stylesheet" href="popup.css">
     <!-- Ensure utils.js is loaded first -->
     <script src="utils.js"></script>
