--- a/Chrome/popup.html
+++ b/Chrome/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>ArXiv Redirector</title>
+    <title>Page Redirector</title>
     <link rel="stylesheet" href="popup.css">
     <script type="module" src="popup.js"></script>
 </head>
