--- a/Chrome/popup.html
+++ b/Chrome/popup.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Page Redirector</title>
     <link rel="stylesheet" href="popup.css">
+    <!-- Ensure utils.js is loaded first -->
+    <script src="utils.js"></script>
     <script type="module" src="popup.js"></script>
 </head>
 <body>
